fixed 'no task available' text spacing

--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -28,7 +28,7 @@
 }
 
 .no-task {
-    margin-top: 20px;
+    margin-top: 2px;
 
     line-height: 24px;
 
